# allo

backend/: Cargo.toml  build.rs
backend/src/: configuration.rs  main.rs  prelude.rs
backend/src/api/: mod.rs
backend/src/api/family/: add.rs  mod.rs  register.rs  remove.rs
backend/src/api/invitation/: accept.rs  create.rs  get.rs  mod.rs
backend/src/api/notify/: events.rs  mod.rs
backend/src/api/overview/: mod.rs
backend/src/api/request/: decline.rs  get.rs  grant.rs  make.rs  mod.rs
backend/src/api/server/: mod.rs
backend/src/api/session/: introspect.rs  login.rs  logout.rs  mod.rs  password.rs
backend/src/api/transaction/: create.rs  list.rs
backend/src/api/user/: allowance.rs  get.rs  mod.rs
backend/src/configuration/: FamilyConfiguration.read.sqlite.sql  mod.rs
backend/src/db/: mod.rs  sqlite.rs
backend/src/db/entities/: Allowance.read-for-user.sqlite.sql  Invitation.read-by-family.sqlite.sql  Password.read-by-email.sqlite.sql  Request.create-with-auto-id.sqlite.sql  Request.read-for-family.sqlite.sql  Request.read-for-user.sqlite.sql  Transaction.balance.sqlite.sql  Transaction.create-with-auth-id.sqlite.sql  Transaction.read-for-user-limit.sqlite.sql  User.read-by-family.sqlite.sql  allowance.rs  configuration.rs  currency.rs  family.rs  invitation.rs  mod.rs  password.rs  request.rs  transaction.rs  user.rs
backend/src/db/migrations/sqlite/: 01_initialize.sql  02_invitations.sql
backend/src/db/values/: currency_format.rs  email_address.rs  mod.rs  password_hash.rs  role.rs  schedule.rs  timestamp.rs  transaction_type.rs  uid.rs  url.rs
backend/src/email/: dummy.rs  mod.rs  sender.rs  smtp.rs  template.rs
backend/src/notifications/: dummy.rs  mod.rs  redis.rs
backend/src/tasks/: Allowance.pay.sqlite.sql  Scheduled.check.sqlite.sql  Scheduled.update.sqlite.sql  allowance.rs  mod.rs
frontend/: api.js  app.js  db.js  index.html  menu.css  notifications.js  service.js  state.js  style.css  ui.js  validators.js  views.js
frontend/views/: add-member.html  add-member.js  change-password.html  change-password.js  family.html  family.js  invite.html  invite.js  join.html  join.js  login.html  login.js  make-request.html  make-request.js  overview.html  overview.js  register.html  register.js  request.html  request.js  settings.html  settings.js  transactions.html  transactions.js  user.html  user.js
templates/: en.html  index.toml
templates/en/: invitation.md
tools/trans/: __main__.py  js.py
