[package]
name = "allo"
version = "0.1.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[build-dependencies]
resvg = "0.29"
tiny-skia = "0.8"
usvg = "0.29"

[dependencies]
actix = "*"
actix-rt = "*"
actix-web = "*"
bcrypt = "0.14"
chrono = "0.4"
either = "1.8"
email_address = "0.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = "*"
url = "2.3"
uuid = { version = "1.3", features = ["v4"] }

[dependencies.redis]
version = "0.22"
optional = true
features = ["aio", "tokio-comp"]

[dependencies.serde_cbor]
version = "0.11"
optional = true

[dependencies.serial_test]
version = "1.0"
optional = true

[dependencies.weru]
git = "https://github.com/moses-palmer/weru"
tag = "v0.1.0"

[features]
default = ["channel-redis", "database-sqlite", "email-smtp", "session-redis"]
channel-redis = ["weru/channel-redis"]
database-sqlite = ["weru/database-sqlite"]
email-drop = ["weru/email-drop"]
email-smtp = ["weru/email-smtp"]
session-cookie = ["weru/session-cookie"]
session-redis = ["weru/session-redis"]
