[package]
name = "allo"
version = "0.1.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[build-dependencies]
resvg = "0.44"

[dependencies]
actix = "*"
actix-rt = "*"
actix-web = "*"
bcrypt = "0.16"
chrono = "0.4"
email_address = "0.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = "*"
url = "2.5"
uuid = { version = "1.3", features = ["v4"] }

[dependencies.redis]
version = "0.28"
optional = true
features = ["aio", "tokio-comp"]

[dependencies.cbor4ii]
version = "0.3"
optional = true
features = ["serde1"]

[dependencies.serial_test]
version = "1.0"
optional = true

[dependencies.weru]
git = "https://github.com/moses-palmer/weru"
rev = "74d59b471cd98a78cdd18f1583725ce27a125b63"

[features]
default = ["channel-redis", "database-sqlite", "email-smtp", "session-redis"]
channel-redis = ["weru/channel-redis"]
database-sqlite = ["weru/database-sqlite"]
email-drop = ["weru/email-drop"]
email-smtp = ["weru/email-smtp"]
session-cookie = ["weru/session-cookie"]
session-redis = ["weru/session-redis"]
